# evbeantools

./: .gitignore  README.md  pyproject.toml
docs/: CONTRIBUTING.md  example.beancount  how_sing_curr_conv_works.ipynb  sing_curr_conv.md  sing_curr_conv_usage.ipynb
experim/: html_experim.bean  html_experim.html  pandastools_test.ipynb  printer_html_tst.ipynb  test.ipynb
src/evbeantools/: beanfuncs.py  exceptions.py  juptools.py  printer_rich.py  sing_curr_conv.py  sing_curr_conv_utils.py  summator.py  utils.py
tests/: printer_rich_test.py  sing_curr_conv_test.py  sing_curr_conv_utils_test.py  summator_test.py
