[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evbeantools"
version = "0.1.0"
description = "A collection of tools for working with beancount, a Plain Text Accounting tool."

dependencies = [
    "setuptools", # This is required to avoid errors `ModuleNotFoundError: No module named 'pkg_resources'`
    "beancount>2",
    "beanquery",
    "ipykernel",
    "plotly",
    "nbformat",
    "pandas",
    "matplotlib",
    "premailer",
]

[project.optional-dependencies]
# For development
dev = [
    "pytest",
    "pexpect ; sys_platform == 'linux'",
    "wexpect ; sys_platform == 'win32'",
    "bs4",
]